use setting field for custom field string match

--- a/settings.yml
+++ b/settings.yml
@@ -1,3 +1,3 @@
-instagram_custom_field_name: ''
-twitter_custom_field_name: ''
-linkedin_custom_field_name: ''
+instagram_custom_field_name: 'Instagram'
+twitter_custom_field_name: 'Twitter'
+linkedin_custom_field_name: 'LinkedIn Profile'
