--- a/settings.yml
+++ b/settings.yml
@@ -1,3 +1,8 @@
 instagram_custom_field_name: 'Instagram'
 twitter_custom_field_name: 'Twitter'
 linkedin_custom_field_name: 'LinkedIn Profile'
+
+_icon:
+  default: "user|globe|fab-twitter|fab-facebook-f|fab-linkedin-in|building|fab-instagram"
+  type: list
+  description: "setting necessary to load the appropriate icons"
