--- a/settings.yml
+++ b/settings.yml
@@ -1,8 +1,9 @@
 instagram_custom_field_name: 'Instagram'
 twitter_custom_field_name: 'Twitter'
 linkedin_custom_field_name: 'LinkedIn Profile'
+youtube_custom_field_name: 'Youtube'
 
 _icon:
-  default: "user|globe|fab-twitter|fab-facebook-f|fab-linkedin-in|building|fab-instagram"
+  default: "user|globe|fab-twitter|fab-facebook-f|fab-linkedin-in|building|fab-instagram|fab-youtube"
   type: list
   description: "setting necessary to load the appropriate icons"
