--- a/settings.yml
+++ b/settings.yml
@@ -2,6 +2,7 @@ instagram_custom_field_name: 'Instagram'
 twitter_custom_field_name: 'Twitter'
 linkedin_custom_field_name: 'LinkedIn Profile'
 youtube_custom_field_name: 'Youtube'
+icon_color: 'black'
 
 _icon:
   default: "user|globe|fab-twitter|fab-facebook-f|fab-linkedin-in|building|fab-instagram|fab-youtube"
