DEV: Lint files

--- a/settings.yml
+++ b/settings.yml
@@ -1,18 +1,18 @@
-facebook_custom_field_name: 'Facebook'
-instagram_custom_field_name: 'Instagram'
-twitter_custom_field_name: 'Twitter'
-linkedin_custom_field_name: 'LinkedIn Profile'
-youtube_custom_field_name: 'Youtube'
-discord_custom_field_name: 'Discord'
-steam_custom_field_name: 'Steam'
-twitch_custom_field_name: 'Twitch'
-soundcloud_custom_field_name: 'Soundcloud'
-spotify_custom_field_name: 'Spotify'
-bandcamp_custom_field_name: 'Bandcamp'
-email_custom_field_name: 'Email'
-tiktok_custom_field_name: 'Tiktok'
-telegram_custom_field_name: 'Telegram'
-icon_color: 'black'
+facebook_custom_field_name: "Facebook"
+instagram_custom_field_name: "Instagram"
+twitter_custom_field_name: "Twitter"
+linkedin_custom_field_name: "LinkedIn Profile"
+youtube_custom_field_name: "Youtube"
+discord_custom_field_name: "Discord"
+steam_custom_field_name: "Steam"
+twitch_custom_field_name: "Twitch"
+soundcloud_custom_field_name: "Soundcloud"
+spotify_custom_field_name: "Spotify"
+bandcamp_custom_field_name: "Bandcamp"
+email_custom_field_name: "Email"
+tiktok_custom_field_name: "Tiktok"
+telegram_custom_field_name: "Telegram"
+icon_color: "black"
 
 _icon:
   default: "user|globe|temporary-twitter-x|fab-facebook|fab-linkedin-in|building|fab-instagram|fab-youtube|fab-discord|fab-steam|fab-twitch|fab-bandcamp|fab-spotify|fab-soundcloud|envelope|fab-tiktok|fab-telegram"
