--- a/settings.yml
+++ b/settings.yml
@@ -12,9 +12,10 @@ bandcamp_custom_field_name: "Bandcamp"
 email_custom_field_name: "Email"
 tiktok_custom_field_name: "Tiktok"
 telegram_custom_field_name: "Telegram"
+mastodon_custom_field_name: "Mastodon"
 icon_color: "black"
 
 _icon:
-  default: "user|globe|temporary-twitter-x|fab-facebook|fab-linkedin-in|building|fab-instagram|fab-youtube|fab-discord|fab-steam|fab-twitch|fab-bandcamp|fab-spotify|fab-soundcloud|envelope|fab-tiktok|fab-telegram"
+  default: "user|globe|temporary-twitter-x|fab-facebook|fab-linkedin-in|building|fab-instagram|fab-youtube|fab-discord|fab-steam|fab-twitch|fab-bandcamp|fab-spotify|fab-soundcloud|envelope|fab-tiktok|fab-telegram|fab-mastodon"
   type: list
   description: "setting necessary to load the appropriate icons"
